Build working for JavaFx 12